argocd/applications/posthog/deployment-posthog-events.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posthog-events
  labels:
    "app.kubernetes.io/name": "posthog"
    "app.kubernetes.io/instance": "posthog"
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
        app: posthog
        release: "posthog"
        role: events
  replicas: 1
  template:
    metadata:
      annotations:
        checksum/secrets.yaml: 0fb333758ecd0b2c9b7454b6f2bd27c23c05e3205e9a1cfb1e65827c2446b799
      labels:
        app: posthog
        release: "posthog"
        role: events
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: posthog
      containers:
      - name: posthog-events
        image: "posthog/posthog:7a6ab0d30c88a981a45491ac35f2b02d09d56c0f"
        command:
          - ./bin/docker-server
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /_livez
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /_readyz?role=events
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        startupProbe:
          httpGet:
            path: /_readyz?role=events
            port: 8000
            scheme: HTTP
          failureThreshold: 60
          initialDelaySeconds: 0
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 1000m
            memory: 2Gi
          limits:
            cpu: 2000m
            memory: 4Gi
