argocd/applications/posthog/deployment-posthog-plugins.yaml
# Keep this in sync with `plugins-async-deployment.yaml`
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posthog-plugins
  labels:
    "app.kubernetes.io/name": "posthog"
    "app.kubernetes.io/instance": "posthog"
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    matchLabels:
        app: posthog
        release: "posthog"
        role: plugins
  replicas: 1
  template:
    metadata:
      annotations:
        checksum/secrets.yaml: 3867c1c42636d72f5b521cd41f6720e8534295c03d52d638e50772be1b0c30a3
      labels:
        app: posthog
        release: "posthog"
        role: plugins
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: posthog
      containers:
      - name: posthog-plugins
        image: "posthog/posthog-node:bf60774b71961a8674ca24ed1bd42bed4d670f72"
        imagePullPolicy: IfNotPresent
        command:
          - node
          - nodejs/dist/index.js
        ports:
        # Expose the port on which the healtchheck endpoint listens
        - containerPort: 6738
        livenessProbe:
          exec:
            command:
              # Just check that we can at least exec to the container
              - "true"
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /_health
            port: 6738
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        resources:
            {}
