argocd/applications/posthog/deployment-posthog-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posthog-web
  labels:
    "app.kubernetes.io/name": "posthog"
    "app.kubernetes.io/instance": "posthog"
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    matchLabels:
        app: posthog
        release: "posthog"
        role: web
  replicas: 1
  template:
    metadata:
      annotations:
        checksum/secrets.yaml: 2ecbce8859a89b02244995ae16d3349df330281a86db6fe93bc8df634289c73f
      labels:
        app: posthog
        release: "posthog"
        role: web
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: posthog
      containers:
      - name: posthog-web
        image: "posthog/posthog:0d2db99f795a0f6201f30ab833016c41c1271a5a"
        command:
          - ./bin/docker-server
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /_livez
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /_readyz?role=web
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        startupProbe:
          httpGet:
            path: /_readyz
            port: 8000
            scheme: HTTP
          failureThreshold: 24
          initialDelaySeconds: 0
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
            {}
