argocd/applications/posthog/deployment-posthog-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posthog-worker
  labels:
    "app.kubernetes.io/name": "posthog"
    "app.kubernetes.io/instance": "posthog"
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    matchLabels:
        app: posthog
        release: "posthog"
        role: worker
  replicas: 1
  template:
    metadata:
      annotations:
        checksum/secrets.yaml: 9c57de570ed022c4f60e15da943de7fd6d99410d6b4634b7f207aa16d46b9a9a
      labels:
        app: posthog
        release: "posthog"
        role: worker
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: posthog
      containers:
      - name: posthog-workers
        image: "mirror.gcr.io/posthog/posthog:release-1.43.1"
        imagePullPolicy: IfNotPresent
        command:
          - ./bin/docker-worker-celery
          - --with-scheduler
        ports:
        - containerPort: 8000
        resources:
            {}
