argocd/applications/posthog/service-posthog-capture.yaml
apiVersion: v1
kind: Service
metadata:
  name: posthog-capture
  labels:
    "app.kubernetes.io/name": "posthog"
    "app.kubernetes.io/instance": "posthog"
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: capture
  selector:
    app: posthog
    role: capture
