argocd/applications/posthog/service-posthog-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: posthog-web
  labels:
    "app.kubernetes.io/name": "posthog"
    "app.kubernetes.io/instance": "posthog"
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: posthog
  selector:
    app: posthog
    role: web
